# SlotDiffusion

./: pyproject.toml
.dvc/: config
pretrained/: sa_ldm_celeba_params-res128.pth.dvc  sa_ldm_clevrtex_params-res128.pth.dvc  sa_ldm_dino_coco_params-res224.pth.dvc  sa_ldm_dino_voc_params-res224.pth.dvc  savi_ldm_movid_params-res128.pth.dvc  savi_ldm_movie_params-res128.pth.dvc  savi_ldm_movisolid_params-res128.pth.dvc  savi_ldm_movitex_params-res128.pth.dvc  savi_ldm_physion_params-res128.pth.dvc  savi_ldm_slotformer_physion_params-res128.pth.dvc  vqvae_celeba_params-res128.pth.dvc  vqvae_clevrtex_params-res128.pth.dvc  vqvae_coco_params-res224.pth.dvc  vqvae_movid_params-res128.pth.dvc  vqvae_movie_params-res128.pth.dvc  vqvae_movisolid_params-res128.pth.dvc  vqvae_movitex_params-res128.pth.dvc  vqvae_physion_params-res128.pth.dvc  vqvae_voc_params-res224.pth.dvc
