[project]
name = "SlotDiffusion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.8.20"
dependencies = [
    "chardet>=5.2.0",
    "einops>=0.8.1",
    "lpips>=0.1.4",
    "nerv",
    "omegaconf>=2.3.0",
    "pycocotools>=2.0.7",
    "pytorch-fid>=0.3.0",
    "pytorch-lightning==1.6.2",
    "scikit-image>=0.21.0",
    "torch==1.10.1",
    "torchaudio==0.10.1",
    "torchmetrics==0.8.0",
    "torchvision==0.11.2",
    "transformers>=4.46.3",
]

[tool.uv]
override-dependencies = [
    "open3d; sys_platform == 'never'",
]

[tool.uv.sources]
nerv = { git = "https://github.com/Wuziyi616/nerv.git", rev = "v0.2.0" }
